update all files - solve bugs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </header>
             <div id="outer-input-div">
                 <div id="inner-input-div">
+                    <p id="depth-label">Enter the Depth: </p>
                     <input type="text" id="depth-input-field">
                     <input type="button" id="cas-button" value="Count And Say">
                 </div>
