display number of characters processed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <p id="depth-label">Enter the Depth: </p>
                     <input type="text" id="depth-input-field">
                     <input type="button" id="cas-button" value="Count And Say">
+                    <p id="chars-p">Characters Processed: </p>
                 </div>
             </div>
             
