add execution time to be displayed

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <input type="text" id="depth-input-field">
                     <input type="button" id="cas-button" value="Count And Say">
                     <p id="chars-p">Characters Processed: </p>
+                    <p id="exe-time-p">Execution Time: </p>
                 </div>
             </div>
             
